# xfce-nameday-plugin

./: AUTHORS  CITATION.cff  CONTRIBUTING.md  ChangeLog  Makefile.am  NEWS  README.md  SECURITY.md  THANKS  TODO  Todo.txt  autogen.sh  configure.ac  configure.ac.in  index.html  styles.css
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml
data/: Makefile.am  czech.dat.leap
icons/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile  Makefile.am  Makefile.in  nameday-definitions.h  nameday-plugin-callendar.c  nameday-plugin-callendar.h  nameday-plugin-data.c  nameday-plugin-data.h  nameday-plugin-dialogs.c  nameday-plugin-dialogs.h  nameday-plugin.c  nameday-plugin.desktop  nameday-plugin.desktop.in  nameday-plugin.h  nameday-utils.c  nameday-utils.h
po/: ChangeLog  LINGUAS  Makefile  Makevars  POTFILES.in  cs.po
